# computer-graphics-mse

.github/workflows/: build_cmake.yml
src/App/: CMakeLists.txt  Window.cpp  Window.h  resources.qrc
src/App/Scene/: Camera.cpp  Camera.h  Lihgt.h  Scene.cpp  Scene.h
src/App/Shaders/: fractal.fs  model.fs  model.vs
